# AI-BRONDOLAN

./: brondol.py  chat.py  main.py  pyproject.toml  run_brondol.py  run_ngintil.py  run_voice.py
logs/: detections.csv
src/models/brondol_ncnn_model/: metadata.yaml  model_ncnn.py
src/services/: DetectionCsvService.py  DetectionLogService.py  SerialService.py
src/vision/: brondol.py  ngintil.py
